Updated Java version, API Version, Added Debugging command to toggle more debugging output, rewrote some of the giveitem command code and the tab completer for giveitem, also removed commented out code, added line to ensure when registering item recipes it doesn't try to read a dirrectory.